Fix more dark mode issues resulting from styling changes

--- a/app/styles/components/_forms.scss
+++ b/app/styles/components/_forms.scss
@@ -431,3 +431,7 @@ input.input-lg,
     right: 5px;
   }
 }
+
+input::placeholder, textarea::placeholder {
+  color: $text-muted !important;
+}
