--- a/app/styles/components/_new-select.scss
+++ b/app/styles/components/_new-select.scss
@@ -18,6 +18,7 @@
         padding-right: 35px;
         border: solid 1px $border;
         border-radius: 4px;
+        opacity: 1;
         padding: 10px;
     }
 }
