--- a/app/styles/themes/_dark.scss
+++ b/app/styles/themes/_dark.scss
@@ -82,7 +82,7 @@ $input-bg-hover                      : $light-grey;
 
 
 //** `<input disabled>` background color
-$input-bg-disabled                   : #f3f4f8;
+$input-bg-disabled                   : $bg-disabled;
 
 //** Text color for `<input>`s
 $input-color                         : lighten($text-color, 50%);
